# SlicerNetstim

./: CMakeLists.txt  README.md
AlphaOmega/: CMakeLists.txt  qSlicerAlphaOmegaModuleWidget.cxx  qSlicerAlphaOmegaModuleWidget.h
AlphaOmega/Logic/: vtkSlicerAlphaOmegaLogic.cxx
AlphaOmega/MRML/: vtkMRMLAlphaOmegaChannelNode.cxx  vtkMRMLAlphaOmegaChannelNode.h
AlphaOmegaMinimal/: AlphaOmegaMinimal.py  CMakeLists.txt
AlphaOmegaMinimal/Resources/UI/: AlphaOmegaMinimal.ui
CurveToBundle/: CMakeLists.txt  CurveToBundle.py
CurveToBundle/CurveToBundleLib/Widgets/: multiHandleSlider.py  multiModelSelector.py
CurveToBundle/Resources/UI/: CurveToBundle.ui
ImportACPCAutodetect/: ImportACPCAutodetect.py
ImportAtlas/: ImportAtlas.py
LeadOR/: CMakeLists.txt  LeadOR.py
LeadOR/LeadORLib/: util.py
LeadOR/LeadORLib/Widgets/: tables.py
LeadOR/Resources/UI/: LeadOR.ui
SlicerNetstimLib/: LeadSubjectAnatToFrame.py  LeadSubjectORScene.py  util.py
StereotacticPlan/StereotacticPlanLib/: util.py
StereotacticPlan/StereotacticPlanLib/ImportFrom/: Import_From_Brainlab.py
WarpDrive/: CMakeLists.txt  README.md  WarpDrive.py
WarpDrive/Resources/UI/: WarpDrive.ui
WarpDrive/WarpDriveLib/Effects/: CircleEffect.py  DrawEffect.py
WarpDrive/WarpDriveLib/Helpers/: GridNodeHelper.py  LeadDBSCall.py  WarpDriveUtil.py
WarpDrive/WarpDriveLib/Tools/: DrawTool.py  PointToPointTool.py  (+1 more)
compositeToGridTransform/: CMakeLists.txt  compositeToGridTransform.cxx  compositeToGridTransform.xml
fiducialRegistrationVariableRBF/: fiducialRegistrationVariableRBF.cxx  fiducialRegistrationVariableRBF.xml
(+4 files in other folders)
